# PersonalKnowledgePool

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  agents.dockerfile  docker-compose.yaml  mcp.dockerfile  pyproject.toml
MCP/: .gitignore  demo.py  pyproject.toml  server.py  settings.py
MCP/alembic/: env.py
MCP/alembic/versions/: b4e7b537d1c0_updated_schema.py  c20a985891e5_add_tables_article_type_and_.py
MCP/db/: database.py  session.py  sql_demo.py
MCP/db/models/: article.py
MCP/registration/: tools.py
MCP/schemas/: feed_model.py  schema_model.py  search_result_model.py
MCP/scripts/: install_system_dependencies.sh  save_cryptography_summary.py
MCP/services/: feed_service.py  psql_service.py  web_scarper.py  web_search_service.py
MCP/tools/: feed_parser.py  psql_query.py  web_scraper.py  web_search.py
agents/: config.yaml  graph.py  init_client.py  pyproject.toml
agents/nodes/: next_task.py  planner.py  query_resolver.py  response_synthesizer.py  task_context.py  tool_call.py
agents/schemas/: context_query.py  planner_output.py  search_result.py  state.py  tool_selection.py
agents/utilities/: context_helper.py  dependency_helper.py  load_model.py  results_parser.py  retry_helper.py  routing_helper.py  tools_helper.py
searxng/: search_internet.py
searxng/config/: settings.yml
searxng/config/config/: settings.yml
