[project]
name = "personal-knowledge-pool"
version = "2025.0.0"
description = "Personal Knowledge Pool - Learning Resource Agent with MCP Server"
authors = [
    {name = "Rohit Singh", email = "2022singhrohit@gmail.com"}
]
maintainers = [
    {name = "Rohit Singh", email = "2022singhrohit@gmail.com"}
]
requires-python = ">= 3.10"
dependencies = [
    # Agent dependencies
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langgraph==1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite==0.22.0",
    # MCP server dependencies
    "httpx",
    "requests",
    "feedparser==6.0.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "alembic>=1.18.5",
    "fastmcp==3.4.2",
    "crawl4ai>=0.9.0",
    "typer[all]>=0.25.1",
]
