[project]
name = "articles-mcp"
version = "0.1.0"
dependencies = [
    "httpx",
    "requests",
    "feedparser==6.0.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "alembic>=1.18.5",
    "fastmcp==3.4.2",
    "crawl4ai>=0.9.0",
    "typer[all]>=0.25.1",
]
