[project]
name="search-learning-resource-agent"
version = "2025.0.0"
authors = [
	{name="Rohit Singh", email="2022singhrohit@gmail.com"}
]
maintainers = [
	{name="Rohit Singh", email="2022singhrohit@gmail.com"}
]
dependencies=[
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langgraph==1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.22.0",
]
requires-python = ">= 3.10"
